# compehndly

./: README.md
.github/workflows/: format.yml  publish.yml  tests.yml
python/: pyproject.toml
python/src/compehndly/: __init__.py
python/src/compehndly/adapters/: __init__.py  base.py  numpy_adapter.py  pandas_adapter.py  polars_adapter.py
python/src/compehndly/core/: __init__.py  conversion.py  models.py  registry.json  registry.py  registrymanager.py
python/src/compehndly/derived_variables/: correction.py  imputation.py  statsutils.py  summation.py
python/src/compehndly/utils/: bins.py  build_registry.py  conditionals.py  example_function.py
python/tests/: conftest.py  test_adapters.py  test_dataframe_integration.py  test_registry.py  utils.py
python/tests/derived_variables/: test_imputation.py  test_summation.py
